# roch_robot

./: README.md  roch.rosinstall  setup_roch.sh  setup_sensors.sh
roch_base/: CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml~
roch_base/config/: PID.cfg  diagnostics.yaml
roch_base/include/roch_base/: core_wrapper.h  roch_diagnostics.h  roch_hardware.h
roch_base/include/roch_base/core/: Exception.h  Logger.h  Message.h  Message_cmd.h  Message_data.h  Message_request.h  Number.h  Transport.h  crc.h  sawyer.h  serial.h
roch_base/launch/: base.launch
roch_base/src/: .kdev_include_paths  core_wrapper.cpp  odom.cpp  roch_base.cpp  roch_diagnostics.cpp  roch_hardware.cpp
roch_base/src/core/: Logger.cpp  Message.cpp  Message_cmd.cpp  Message_data.cpp  Message_request.cpp  Number.cpp  Transport.cpp  crc.cpp  linux_serial.cpp
roch_base/test/: test_encoder.cpp  test_imu.cpp  test_pid.cpp  test_platformInfo.cpp  test_rangefinder.cpp  test_speed.cpp  test_wheelinfo.cpp
roch_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
roch_bringup/env-hooks/: 25.roch.sh.em
roch_bringup/launch/: concert_client.launch  minimal.launch  sensor.launch
roch_bringup/launch/includes/laser/: ls01c.launch.xml
roch_bringup/launch/includes/roch/: mobile_base.launch.xml
roch_capabilities/: CHANGELOG.rst  CMakeLists.txt  package.xml
roch_capabilities/interfaces/: RochBringup.yaml  RochCliff.yaml  RochPSD.yaml  RochUlt.yaml
roch_capabilities/launch/: demo.launch  rocon_master_with_roch.launch
roch_capabilities/param/: defaults_roch_capabilities.yaml
roch_capabilities/providers/: astra_rgbd_sensor.yaml  asus_xtion_pro_rgbd_sensor.yaml  depthimage_to_laserscan.yaml  diagnostics.yaml  differential_mobile_base.yaml  kinect_rgbd_sensor.yaml  laser_sensor.yaml  ls01c_laser_sensor.yaml  navigation_2d.yaml  r200_rgbd_sensor.yaml  rgbd_sensor.yaml  robot_state_publisher.yaml  roch_bringup.yaml  roch_cliff.yaml  roch_differential_mobile_base.yaml  roch_psd.yaml  roch_ult.yaml  rplidar_laser_sensor.yaml
roch_capabilities/providers/launch/: depthimage_to_laserscan.launch  diagnostics.launch  laser_sensor.launch  navigation_2d.launch  rgbd_sensor.launch  robot_state_publisher.launch  roch_bringup.launch
roch_control/: CHANGELOG.rst  package.xml  package.xml~
roch_control/config/: control.yaml  localization.yaml  twist_mux.yaml
roch_control/launch/: control.launch
roch_description/: CHANGELOG.rst  package.xml  package.xml~
roch_description/launch/: description.launch
roch_description/meshes/: chassis.dae  wheel.dae
roch_description/meshes/sensors/: asus_xtion_pro_live.dae  kinect.dae  r200.dae  xtion_pro_camera.dae  xtion_pro_stack.dae
roch_description/meshes/stacks/: pole_bottom.dae
roch_description/robots/: roch_standard.urdf.xacro  roch_standard_astra.urdf.xacro  roch_standard_astra_ls01c.urdf.xacro  roch_standard_astra_rplidar.urdf.xacro  roch_standard_astra_sicklmsxx.urdf.xacro  roch_standard_asus_xtion_pro_offset_sicklmsxx.urdf.xacro  roch_standard_asus_xtion_pro_sicklmsxx.urdf.xacro  roch_standard_kinect_sicklmsxx.urdf.xacro  roch_standard_r200_sicklmsxx.urdf.xacro  roch_standard_sicklmsxx.urdf.xacro
roch_description/urdf/: roch.urdf.xacro  roch_gazebo.urdf.xacro  roch_library.urdf.xacro  roch_properties.urdf.xacro
roch_description/urdf/sensors/: astra.urdf.xacro  ls_ls01c.urdf.xacro  rplidar.urdf.xacro  sick_lmsxx.urdf.xacro
roch_ftdi/: 57-roch-laptop.rules  57-roch.rules  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roch_ftdi/bluetooth/: readme.txt
roch_ftdi/include/roch_ftdi/: scanner.hpp  writer.hpp
roch_ftdi/scripts/: create_laptop_rules  create_udev_rules
roch_ftdi/src/: CMakeLists.txt  find_devices.cpp  flasher.cpp  ftdi_read_eeprom.cpp  ftdi_roch.cpp  ftdi_scan.cpp  ftdi_write_eeprom.cpp  get_serial_number.cpp  overwrite_serial_number.cpp  reset_device.cpp  unflasher.cpp
roch_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
roch_msgs/msg/: EncoderEvent.msg  EncoderEvent.msg~  PIDEvent.msg
roch_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml~
roch_safety_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
roch_safety_controller/include/roch_safety_controller/: .kdev_include_paths  safety_controller.hpp
roch_safety_controller/launch/: standalone.launch
roch_safety_controller/plugins/: nodelet_plugins.xml
roch_safety_controller/src/: nodelet.cpp
roch_sensorpc/: CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml~
roch_sensorpc/include/roch_sensorpc/: roch_sensorpc.hpp
roch_sensorpc/launch/: standalone.launch
roch_sensorpc/src/: roch_sensorpc.cpp
