<?xml version="1.0"?>
<package>
  <name>roch_bringup</name>
  <version>0.0.2</version>
  <description>SawYer roch installation and integration package</description>

  <author email="wzhang@softrobtech.com">Carl</author>

  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>husky_base</run_depend>
  <run_depend>husky_control</run_depend>
  <run_depend>husky_description</run_depend>
  <run_depend>imu_filter_madgwick</run_depend>
  <run_depend>imu_transformer</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>microstrain_3dmgx2_imu</run_depend>
  <run_depend>nmea_comms</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>robot_upstart</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>um6</run_depend>
  <run_depend>ur_driver</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
