<?xml version="1.0"?>
<package>
  <name>roch_capabilities</name>
  <version>1.0.13</version>
  <description>Capabilities for Roch</description>

  <author email="wzhang@softrobtech.com">Carl</author> 
  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>

  <license>BSD</license>



  <url type="website">http://wiki.ros.org/roch_capabilities</url> 
  <url type="repository">https://github.com/SawYer-Robotics/roch</url>
  <url type="bugtracker">https://github.com/SawYer-Robotics/roch/issues</url>


  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>roch_base</run_depend>
<!--  <run_depend>roch_bringup</run_depend> --><!-- comment due to circle dependencies-->
  <run_depend>roch_navigation</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_apps</run_depend>
  <run_depend>std_capabilities</run_depend>
  

  <export>
    <capability_interface>interfaces/RochBringup.yaml</capability_interface>
    <capability_interface>interfaces/RochUlt.yaml</capability_interface>
    <capability_interface>interfaces/RochPSD.yaml</capability_interface>
    <capability_interface>interfaces/RochCliff.yaml</capability_interface>
    <capability_provider>providers/roch_bringup.yaml</capability_provider>
    <capability_provider>providers/depthimage_to_laserscan.yaml</capability_provider>
    <capability_provider>providers/differential_mobile_base.yaml</capability_provider>
    <capability_provider>providers/rgbd_sensor.yaml</capability_provider>
    <capability_provider>providers/astra_rgbd_sensor.yaml</capability_provider>   
    <capability_provider>providers/asus_xtion_pro_rgbd_sensor.yaml</capability_provider>   
    <capability_provider>providers/kinect_rgbd_sensor.yaml</capability_provider>   
    <capability_provider>providers/r200_rgbd_sensor.yaml</capability_provider>   
    <capability_provider>providers/laser_sensor.yaml</capability_provider>   
    <capability_provider>providers/ls01c_laser_sensor.yaml</capability_provider> 
    <capability_provider>providers/rplidar_laser_sensor.yaml</capability_provider> 
    <capability_provider>providers/robot_state_publisher.yaml</capability_provider>
    <capability_provider>providers/roch_ult.yaml</capability_provider>
    <capability_provider>providers/roch_psd.yaml</capability_provider>
    <capability_provider>providers/roch_cliff.yaml</capability_provider>    
    <capability_provider>providers/diagnostics.yaml</capability_provider>  
    <capability_provider>providers/navigation_2d.yaml</capability_provider>  
    <capability_provider>providers/roch_differential_mobile_base.yaml</capability_provider> 
  </export>
</package>
