<?xml version="1.0"?>
<package>
  <name>roch_control</name>
  <version>1.0.11</version>
  <description>SawYer roch controller configurations</description>

  <author email="wzhang@softrobtech.com">Carl</author>
  <author email="pbovbel@clearpathrobotics.com">Paul Bovbel</author>
  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/roch_control</url>
  <url type="bugtracker">https://github.com/SawYer-Robotics/roch_robot/issues</url>
  <url type="repository">https://github.com/SawYer-Robotics/roch_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>
  <run_depend>create_node</run_depend>


  <export>
  </export>
</package>
