<?xml version="1.0"?>
<package>
  <name>roch_description</name>
  <version>1.0.17</version>

  <description>Soy Roch URDF description</description>


  <author email="carlzhang@soyrobotics.com">Carl</author>
  <author email="tli@softrobtech.com">Allen</author>
  <maintainer email="carlzhang@soyrobotics.com">Carl</maintainer>


  <url type="bugtracker">https://github.com/Soy-Robotics/roch_robot/issues</url>
  <url type="repository">https://github.com/Soy-Robotics/roch_robot</url>
  <url type="website">http://ros.org/wiki/roch_descrption</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>


  <export>
  </export>
</package>
