<package>
  <name>roch_ftdi</name>
  <version>1.0.10</version>
  <description>
	    Utilities for flashing and enabling roch's USB connection.
	    This package contains tools for flashing the roch's FTDI chip (usually done at the factory).
	    The special firmware for the FTDI chip (USB to serial converter) enables it to appear as 
	    /dev/roch on the user's PC. 
  </description>
  <author email="yhju@yujinrobot.com">Younghun Ju</author>
  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>

  <url type="website">http://ros.org/wiki/roch_ftdi</url>
  <url type="bugtracker">https://github.com/SawYer-Robotics/roch_robot/issues</url>
  <url type="repository">https://github.com/SawYer-Robotics/roch_robot</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ecl_command_line</build_depend>

  <build_depend>libusb-dev</build_depend>
  <build_depend>libftdi-dev</build_depend>
  <build_depend>ftdi-eeprom</build_depend>

  <run_depend>ecl_command_line</run_depend>

  <run_depend>libusb-dev</run_depend>
  <run_depend>libftdi-dev</run_depend>
  <run_depend>ftdi-eeprom</run_depend>
</package>
