<?xml version="1.0"?>
<package>
  <name>roch_msgs</name>
  <version>1.0.13</version>

  <description>Messages, serivices and actions for SawYer roch</description>

  <author email="wzhang@softrobtech.com">Carl</author>
  <author email="pbovbel@clearpathrobotics.com">Paul Bovbel</author>

  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>
  <url type="website">http://ros.org/wiki/roch_msgs</url>
  <url type="bugtracker">https://github.com/SawYer-Robotics/roch_robot/issues</url>
  <url type="repository">https://github.com/SawYer-Robotics/roch_robot</url>

  <license>BSD</license>

 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
</package>
