<?xml version="1.0"?>
<package>
  <name>roch_robot</name>
  <version>1.0.6</version>
  <description>Metapackage for SawYer roch robot software</description>
  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roch_bringup</run_depend>
  <run_depend>roch_base</run_depend>
  <run_depend>roch_ftdi</run_depend>
  <run_depend>roch_safety_controller</run_depend>
  <run_depend>roch_sensorpc</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
