<?xml version="1.0"?>
<package>
  <name>roch_robot</name>
  <version>1.0.16</version>

  <description>Metapackage for Soy roch robot software</description>

  <maintainer email="carlzhang@soyrobotics.com">Carl</maintainer>
  <author email="carlzhang@soyrobotics.com">Carl</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/Soy-Robotics/roch_robot/issues</url>
  <url type="repository">https://github.com/Soy-Robotics/roch_robot</url>
  <url type="website">http://wiki.ros.org/roch_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roch_description</run_depend>
  <run_depend>roch_control</run_depend>
  <run_depend>roch_msgs</run_depend>
  <run_depend>roch_base</run_depend>
  <run_depend>roch_safety_controller</run_depend>
  <run_depend>roch_sensorpc</run_depend>
  <run_depend>roch_capabilities</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
