<package>
  <name>roch_safety_controller</name>
  <version>0.0.2</version>
  <description>
    A controller ensuring the safe operation of roch.

    The SafetyController keeps track of ult, psd and cliff events. In case of the first three,
    roch is commanded to move back. 
    This controller can be enabled/disabled.
    The safety states (bumper pressed etc.) can be reset. WARNING: Dangerous!
    Refrence with yujinrobot' kobuki.
  </description>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <author email="wzhang@softrobtech.com">Carl</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/SawYer-Robotics/roch_robot/issues</url>
  <url type="repository">https://github.com/SawYer-Robotics/roch_robot</url>
  <url type="website">http://ros.org/wiki/roch_safety_controller</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roch_msgs</build_depend>
  <build_depend>yocs_controllers</build_depend>
  <build_depend>ecl_threads</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roch_msgs</run_depend>
  <run_depend>yocs_controllers</run_depend>
  <run_depend>ecl_threads</run_depend>
  

</package>
