<package>
  <name>roch_sensorpc</name>
  <version>0.0.2</version>
  <description>
    Ult/psd/cliff to pointcloud:
    Publish Ult, cliff, and psd sensors events as points in a pointcloud, so navistack can use them
    for poor-man navigation. Implemented intended to run together with roch_base.
  </description>

  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>
  <author email="wzhang@softrobtech.com">Carl</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/SawYer-Robotics/roch_robot/issues</url>
  <url type="repository">https://github.com/SawYer-Robotics/roch_robot</url>
  <url type="website">http://ros.org/wiki/roch_sensorpc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roch_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roch_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
